# Nexus-Console

./: .gitignore  .lintstagedrc.mjs  .versionrc.json  CHANGELOG.md  README.md  WARP.md  package.json  pnpm-lock.yaml
.ai/: active_task.md
.cursor/rules/: backend-fastapi.mdc  backend-infra.mdc  deps-monorepo.mdc  frontend-query-state.mdc  frontend-react.mdc  testing-pytest.mdc  testing-vitest.mdc  types-sync.mdc
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
.kiro/hooks/: auto-changelog-entry.kiro.hook
.kiro/steering/: backend-rules.md  frontend-rules.md  product.md  structure.md  tech.md
apps/api/: .env.example  Dockerfile  pyproject.toml
apps/api/alembic/versions/: 20251226_1230-9e1a2b3c4d5e_add_rbac_tables.py  20251226_1605-decb75b3de6b_role_exclusivity_metadata.py
apps/api/app/: config.py
apps/api/app/api/: deps.py
apps/api/app/api/v1/: auth.py  rbac.py  router.py  users.py
apps/api/app/core/: exceptions.py
apps/api/app/models/: __init__.py  rbac.py  user.py
apps/api/app/schemas/: rbac.py  user.py
apps/api/app/tests/: conftest.py  test_auth.py  test_rbac.py  test_users.py
apps/web/: .env.example  eslint.config.js  package.json  vite.config.ts  vitest.config.ts
apps/web/scripts/: validate-ui-config.js
apps/web/src/: routeTree.gen.ts
apps/web/src/api/: client.ts
apps/web/src/hooks/: useCounter.test.ts  useCounter.ts  usePermission.test.ts  usePermission.ts
docs/: PROJECT_AUDIT_REPORT.md
scripts/: check-deps.sh  validate-env.sh
(+20 files in other folders)
